--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
- {
+{
   "name": "openai-test-proxy",
   "version": "1.0.0",
   "type": "module",
+  "scripts": {
+    "start": "node api/index.js"
+  },
   "dependencies": {
-    "express": "^4.19.2",
-    "node-fetch": "^3.3.2",
-    "uuid": "^9.0.1"
+    "express": "^4.18.2",
+    "uuid": "^9.0.0",
+    "axios": "^1.6.8",
+    "serverless-http": "^3.2.0"
   }
 }
+
 
